Optimized StructureView & Extended Main Tab System!